# Ctrl_Alt_Discuss

./: .gitignore  README.md  pyproject.toml  requirements.txt  voices_selection.py  xi-lab_voices.py
src/: api_management.py  configuration.py  content.py  content_generator.py  main.py  pipeline.py  rss.py  rss_aggregator.py  script_generator.py  soundfile.py  soundfile_management.py  source.py  thumbnail.py  thumbnail_generator.py
src/personas/: chloe.py  daniel.py  michael.py  personas.py
src/prompts/: conclusion.py  development.py  introduction.py  metadata.py  plan.py  plan_attack.py  plan_defence.py  plan_defense.py
