[tool.poetry]
name = "ctrl_alt_discuss"
version = "1.0.0"
description = ""
authors = ["Constantin Hentgen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
elevenlabs = "^0.2.27"
feedparser = "^6.0.11"
openai = "^1.3.8"
pydub = "^0.25.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"